tests/anytype_invalid_position_bad.stderr
tests/anytype_invalid_position_bad.hop:3:8: error: HOP2079: anytype is only allowed in function parameter positions
