tests/anytype_invalid_position_bad.hop
// Verifies anytype invalid position is rejected.
fn main() {
	var x anytype = 1
	_ = x
}
